# ct-rate-labeling

./: .gitignore  CONTRIBUTING.md  README.md  experiment_log.md  experiment_log_v1.md  plan_prompt_engineering_process.xlsx  pyproject.toml
configs/: config.yaml  prompt_engineering.yaml
configs/prompt/: 3-shot_multi_v1.yaml  3-shot_multi_v2.yaml  3-shot_multi_v3.yaml  3-shot_single_v1.yaml  3-shot_single_v2.yaml  3-shot_single_v3.yaml  default.yaml  zero-shot_multi.yaml
experiment_logs/: experiment_log_v2.md
experiment_logs/Full Dataset Labeling/: experiment_log.md
experiment_logs/Prompt engineering/: experiment_log_v1.md
scripts/: __init__.py  aggregate_metrics.py  compare_label_csvs.py  evaluate_label_agreement.py  evaluate_prediction_performance.py  evaluate_prompt.py  format_examples.py  generate_consensus_ensemble.py  generate_labels.py  make_tiny_tuning_set.py  make_unique_scans_csv.py  summarize_discrepancies.py
src/ctr_labeling/: __init__.py  llm_client.py  parsing.py  utils.py
tests/integration/: test_scripts_integration.py
tests/unit/: test_evaluate_label_agreement.py  test_evaluate_prediction_performance.py  test_evaluate_prompt_helpers.py  test_generate_consensus_ensemble.py  test_generate_labels.py  test_generate_labels_pipeline.py  test_generate_labels_resume.py  test_llm_client.py  test_parsing_utils.py  test_utils_cost.py
