[project]
name = "ct-rate-labeling"
version = "0.1.0"
description = "Generates binary classification labels from radiology reports using an LLM."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas",         # For data I/O and manipulation
    "hydra-core",     # For configuration management
    "openai",         # For LLM API interaction
    "tenacity",       # For robust API retry logic
    "python-dotenv",  # For loading environment variables from .env
    "omegaconf",      # For structured configs shared by scripts and tests
    "tqdm",           # For progress bars in labeling/evaluation scripts
]

[project.optional-dependencies]
tests = [
    "pytest",         # Test runner used in CI and local development
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"